---------------------------------------------------------------------------------------------------
Version: 4.0.4
Date: 2020.09.XX
  Features:
    - Added compressed heat pipes
  Bugfixes:
    - Fix loadtime error with some compressed researches
  Info:
    - 4.0.4 version not found
---------------------------------------------------------------------------------------------------
Version: 4.0.3
Date: 2020.08.31
  Bugfixes:
    - Fix compressed building sorting in single-tab mode
    - Fix module limits not being applied correctly in certain cases
---------------------------------------------------------------------------------------------------
Version: 4.0.2
Date: 2020.08.24
  Bugfixes:
    - Fix boiler fuel use scaling
    - Compressed infinite ores now have a more accurate yield
---------------------------------------------------------------------------------------------------
Version: 4.0.1
Date: 2020.08.22
  Features:
    - Compression planner is now on the shortcut bar instead of being a recipe
  Changes:
    - Compressed boilers no longer require tiered input
  Bugfixes:
    - Fixed cases where tech compression math wasn't accurate
    - Fixed overflow on certain attributes causing crashes
    - Fixed crash with 0 count recipes and numbers with string type
    - Compressed boilers now consume and produce the appropriate amount of fluids
    - Power and fluid scaling on steam engines and turbines is now appropriate to tier and multiplier
  Info:
    - Compressed boilers are still incompatibile with omnifluid, this has not changed
---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: 2020.08.14
  Changes:
    - Updated for Factorio version 1.0.0
    - Fixed an issue with certain recipes that caused a result overflow
---------------------------------------------------------------------------------------------------
Version: 3.18.12
Date: 2020.08.13
  Features: