@@ -3,8 +3,13 @@ Version: 4.0.4
 Date: 2020.09.XX
   Features:
     - Added compressed heat pipes
+    - Added recipes for compressed fluids in condensator
+  Changes:
+    - Compressed boilers now require graded input again
+    - Buffed condensators, no more condensator chains
   Bugfixes:
     - Fix loadtime error with some compressed researches
+    - Fix compressed heatstuffs heat capacity scaling linearly instead of exponentially
   Info:
     - 4.0.4 version not found
 ---------------------------------------------------------------------------------------------------
